--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "colors": "^1.3.3",
-    "puppeteer": "^1.14.0"
+    "colors": "1.3.3",
+    "puppeteer": "1.14.0"
   },
   "devDependencies": {},
   "scripts": {
