--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "colors": "1.3.3"
+    "colors": "1.3.3",
+    "node-os-utils": "1.0.7"
   },
   "devDependencies": {},
   "scripts": {
