--- a/docker-compose-browserless.yml
+++ b/docker-compose-browserless.yml
@@ -1,24 +1,29 @@
 version: '2.1'
 services:
-  browserless:
-    image: browserless/chrome:latest
-    ports:
-     - "3000:3000"
-    environment:
-     - MAX_CONCURRENT_SESSIONS=10
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  ninjabot:
-    build: .
-    tty: true
-    cap_add: [SYS_ADMIN]
-    #shm_size: 1g
-    depends_on:
-      browserless:
-        condition: service_healthy
-    links:
-      - browserless
+    browserless:
+        image: 'browserless/chrome:latest'
+        ports:
+            - '3000:3000'
+        environment:
+            - MAX_CONCURRENT_SESSIONS=1
+            - MAX_QUEUE_LENGTH=0
+            - PREBOOT_CHROME=true
+            - 'DEBUG=*'
+            - CONNECTION_TIMEOUT=-1
+        healthcheck:
+            test: [CMD, curl, '-f', 'http://localhost:3000']
+            interval: 30s
+            timeout: 10s
+            retries: 5
+    ninjabot:
+        build: .
+        tty: true
+        cap_add: [SYS_ADMIN]
+        #shm_size: 1g
+        environment:
+            - BROWSERLESS=true
+        depends_on:
+            browserless: 
+                condition: service_healthy
+        links:
+            - browserless
