--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "colors": "1.3.3",
-    "node-os-utils": "1.0.7"
+    "colors": "1.3.3"
   },
   "devDependencies": {},
   "scripts": {
