--- a/app/package.json
+++ b/app/package.json
@@ -6,9 +6,14 @@
   "dependencies": {
     "colors": "1.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "5.16.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "prettier": "1.16.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write '*.js'"
   },
   "author": "lvcarnevalli",
   "license": "MIT"
