--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write '*.js'"
+    "format": "prettier --write *.js"
   },
   "author": "lvcarnevalli",
   "license": "MIT"
